added modal, addresses creation new approach

--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -34,11 +34,11 @@
             <!--<p class="help-block" ng-show="form.username.$error.required && signup.submitted">A username is required</p>-->
         <!--</div>-->
 
-        <div class="form-group" ng-class="{'has-success': form.phone.$valid && signup.submitted, 'has-error': form.phone.$invalid && signup.submitted}">
-            <label for="phone">Phone number</label>
-            <input id="phone" type="text" name="phone" class="form-control" ng-model="signup.user.phone" ui-mask="999-999-9999" required/>
-          <p class="help-block" ng-show="form.username.$error.required && signup.submitted">A phone number is required</p>
-         </div>
+        <!--<div class="form-group" ng-class="{'has-success': form.phone.$valid && signup.submitted, 'has-error': form.phone.$invalid && signup.submitted}">-->
+            <!--<label for="phone">Phone number</label>-->
+            <!--<input id="phone" type="text" name="phone" class="form-control" ng-model="signup.user.phone" ui-mask="999-999-9999" required/>-->
+          <!--<p class="help-block" ng-show="form.username.$error.required && signup.submitted">A phone number is required</p>-->
+         <!--</div>-->
 
         <div class="form-group" ng-class="{ 'has-success': form.email.$valid && signup.submitted, 'has-error': form.email.$invalid && signup.submitted }">
             <label for="email">Email</label>
