--- a/client/app/dashboard/my-connections/my.connection.html
+++ b/client/app/dashboard/my-connections/my.connection.html
@@ -1,1 +1,2 @@
 {{myConnection.test}}
+<div class="row"><button class="btn btn-primary" ng-click="myConnection.addressModal({mode: 'add', addressData: {}})">Modal</button></div>
