--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -11,8 +11,8 @@
   </div>
 
   <!--<div class="row">-->
-      <button ng-show="!myProfile.isLastTab()" class="btn btn-primary pull-right" ng-click="myProfile.proceed()">Next</button>
-      <button ng-show="myProfile.isLastTab()" class="btn btn-primary pull-right" ng-click="myProfile.proceed()">Finish</button>
+      <!--<button ng-show="!myProfile.isLastTab()" class="btn btn-primary pull-right" ng-click="myProfile.proceed()">Next</button>-->
+      <!--<button ng-show="myProfile.isLastTab()" class="btn btn-primary pull-right" ng-click="myProfile.proceed()">Finish</button>-->
     <!--</div>-->
 </div>
 
