--- a/client/index.html
+++ b/client/index.html
@@ -78,6 +78,8 @@
       <script src="bower_components/ngstorage/ngStorage.js"></script>
       <script src="bower_components/angular-progress-arc/angular-progress-arc.js"></script>
       <script src="bower_components/toastr/toastr.js"></script>
+      <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
+      <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
