check for authenticate first and use ng-href

--- a/client/index.html
+++ b/client/index.html
@@ -160,6 +160,7 @@
           <script src="app/dashboard/my-profile/my.profile.route.js"></script>
           <script src="app/dashboard/my-profile/step1/step1.controller.js"></script>
           <script src="app/dashboard/my-profile/step1/step1.route.js"></script>
+          <script src="app/dashboard/my-profile/step2/step1.controller.js"></script>
           <script src="app/dashboard/my-profile/step2/step2.controller.js"></script>
           <script src="app/dashboard/my-profile/step2/step2.route.js"></script>
           <script src="app/dashboard/my-profile/step3/step3.controller.js"></script>
