--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="components/layout/navbar/navbar.css">
+      <link rel="stylesheet" href="components/widgets/fileupload/fileupload.css">
       <link rel="stylesheet" href="components/widgets/modal/modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
@@ -149,21 +150,23 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/dashboard/connections/my.connection.controller.js"></script>
+          <script src="app/dashboard/connections/my.connection.route.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
+          <script src="app/dashboard/favorites/my.favorites.controller.js"></script>
+          <script src="app/dashboard/favorites/my.favorites.route.js"></script>
           <script src="app/dashboard/messages/messages.controller.js"></script>
           <script src="app/dashboard/messages/messages.route.js"></script>
-          <script src="app/dashboard/my-connections/my.connection.controller.js"></script>
-          <script src="app/dashboard/my-connections/my.connection.route.js"></script>
-          <script src="app/dashboard/my-favorites/my.favorites.controller.js"></script>
-          <script src="app/dashboard/my-favorites/my.favorites.route.js"></script>
+          <script src="app/dashboard/my-profile/add-address/new.address.ctrl.js"></script>
+          <script src="app/dashboard/my-profile/add-address/new.address.route.js"></script>
+          <script src="app/dashboard/my-profile/edit-address/edit.address.controller.js"></script>
+          <script src="app/dashboard/my-profile/edit-address/edit.address.route.js"></script>
           <script src="app/dashboard/my-profile/my.profile.controller.js"></script>
           <script src="app/dashboard/my-profile/my.profile.route.js"></script>
           <script src="app/dashboard/my-profile/step1/step1.controller.js"></script>
           <script src="app/dashboard/my-profile/step1/step1.route.js"></script>
           <script src="app/dashboard/my-profile/step2/step2.controller.js"></script>
           <script src="app/dashboard/my-profile/step2/step2.route.js"></script>
-          <script src="app/dashboard/my-profile/step3/step3.controller.js"></script>
-          <script src="app/dashboard/my-profile/step3/step3.route.js"></script>
           <script src="app/dashboard/my-properties/add.new.property/add.new.property.controller.js"></script>
           <script src="app/dashboard/my-properties/add.new.property/add.new.route.js"></script>
           <script src="app/dashboard/my-properties/my.properties.controller.js"></script>
@@ -194,6 +197,9 @@
           <script src="components/layout/navbar/navbar.controller.js"></script>
           <script src="components/widgets/adress-autocomplete/adress-autocomplete.directive.js"></script>
           <script src="components/widgets/confirm-password/confirm.password.directive.js"></script>
+          <script src="components/widgets/fileselect/fileselect.js"></script>
+          <script src="components/widgets/fileupload/fileupload.js"></script>
+          <script src="components/widgets/fileupload/ngthumb.js"></script>
           <script src="components/widgets/modal/modal.service.js"></script>
           <script src="components/widgets/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/widgets/phone-mask/phone.mask.js"></script>
